<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SignUpActivity">

    <!--<ImageView-->
        <!--android:id="@+id/quiz_imageView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="200dp"-->
       <!---->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:adjustViewBounds="true"
        android:fontFamily="casual"
        android:text="@string/devfest"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/text_white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_name">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hng_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/blue"
                android:text="@string/sign_up"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/name_signUp_edt"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/name"
                android:textColorHint="@color/blue"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hng_textView" />

            <EditText
                android:id="@+id/email_signup_edt"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/email"
                android:textColorHint="@color/blue"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="@+id/name_signUp_edt"
                app:layout_constraintStart_toStartOf="@+id/name_signUp_edt"
                app:layout_constraintTop_toBottomOf="@+id/name_signUp_edt" />

            <EditText
                android:id="@+id/password_signup_Edt"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/password"
                android:textColorHint="@color/blue"
                android:inputType="textPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="@+id/email_signup_edt"
                app:layout_constraintStart_toStartOf="@+id/email_signup_edt"
                app:layout_constraintTop_toBottomOf="@+id/email_signup_edt" />

            <Button
                android:id="@+id/signUp_Btn"
                android:layout_width="@dimen/btn_signin_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/btn_round"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_signup_Edt" />

            <TextView
                android:id="@+id/user_exits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/already_have_an_account_login"
                android:textStyle="bold"
                android:textColor="@color/blue"
                app:layout_constraintEnd_toEndOf="@+id/signUp_Btn"
                app:layout_constraintStart_toStartOf="@+id/signUp_Btn"
                app:layout_constraintTop_toBottomOf="@+id/signUp_Btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>