<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="casual"
        android:text=""
        android:textColor="#FFEBEE"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/logged_in_as"
        android:textColor="#E9F0F0"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_days_rem"
        android:layout_width="257dp"
        android:layout_height="257dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/circlepink"
        android:gravity="center"
        android:outlineAmbientShadowColor="#00971E1E"
        android:shadowColor="#5F5858"
        android:shadowDx="10"
        android:shadowDy="10"
        android:text="39"
        android:textColor="@android:color/white"
        android:textSize="150dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />


    <TextView
        android:layout_width="163dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/days_left"
        android:textColor="#ffffff"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView_days_rem"
        app:layout_constraintEnd_toEndOf="@+id/textView_days_rem"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="@+id/textView_days_rem"
        app:layout_constraintTop_toTopOf="@+id/textView_days_rem"
        app:layout_constraintVertical_bias="0.913" />

    <ImageView
        android:id="@+id/meal_imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bluebgcircle"
        android:src="@drawable/ic_question_answer_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hng_textView"
        app:layout_constraintVertical_bias="0.138" />

    <ImageView
        android:id="@+id/ticket_imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/bluebgcircle"
        android:src="@drawable/ic_dashboard_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hng_textView"
        app:layout_constraintVertical_bias="0.138" />

    <ImageView
        android:id="@+id/profile_imagV"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/circlepink"
        android:src="@drawable/ic_account_circle_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ticket_imageView"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toEndOf="@+id/meal_imageView"
        app:layout_constraintTop_toBottomOf="@+id/hng_textView"
        app:layout_constraintVertical_bias="0.189" />



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="309dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_days_rem">

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@drawable/cardlayoutbg"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/num_text_hr"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="13"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_hour"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/num_text_hr"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="-5dp"
                android:gravity="center"
                android:text="Hours"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/num_minutes"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_toEndOf="@id/tv_hour"
                android:gravity="center"
                android:text="10"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_minutes"
                style="bold"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/num_minutes"
                android:layout_marginStart="24dp"
                android:layout_marginTop="-6dp"
                android:layout_toEndOf="@id/tv_hour"
                android:gravity="center"
                android:text="Minutes"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/num_seconds"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_toEndOf="@id/num_minutes"
                android:gravity="center"
                android:text="02"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_seconds"
                style="bold"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/num_seconds"
                android:layout_marginStart="23dp"
                android:layout_marginTop="-6dp"
                android:layout_toEndOf="@id/num_minutes"
                android:gravity="center"
                android:text="Seconds"
                android:textColor="@android:color/white" />




        </RelativeLayout>




    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/hng_textView"
        android:layout_width="272dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/devFestDay"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>